[package]
name = "gltf"
version = "1.4.1"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]
description = "glTF 2.0 loader"
documentation = "https://docs.rs/gltf"
repository = "https://github.com/gltf-rs/gltf"
homepage = "https://github.com/gltf-rs/gltf"
readme = "README.md"
keywords = ["glTF", "3D", "asset", "model", "scene"]
license = "MIT OR Apache-2.0"
include = ["**/*.rs", "Cargo.toml", "LICENSE-*"]
edition = "2021"
rust-version = "1.61"

[badges]
travis-ci = { repository = "gltf-rs/gltf" }

[workspace]
members = ["gltf-derive"]

[dev-dependencies]
approx = "0.5"

[dependencies]
base64 = { optional = true, version = "0.13" }
byteorder = "1.3"
gltf-derive = { path = "gltf-derive", version = "=1.4.1" }
lazy_static = "1"
urlencoding = { optional = true, version = "2.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = { features = ["raw_value"], version = "1.0" }
serde_repr = "0.1"
serde_with = "3.6"

[dependencies.image_crate]
default-features = false
package = "image"
features = ["jpeg", "png"]
optional = true
version = "0.25"

[features]=
default = ["import", "utils"]
allow_empty_texture = []
extensions = []
utils = []
import = ["base64", "image_crate", "urlencoding"]
guess_mime_type = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
