[package]
name = "gltf-derive"
version = "0.11.0"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]
description = "Internal macros for the gltf crate"
repository = "https://github.com/gltf-rs/gltf"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
inflections = "1.1"
quote = "0.3"
syn = "0.11"
