[package]
name = "gltf-derive"
version = "0.12.0"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]
description = "Internal macros for the gltf crate"
repository = "https://github.com/gltf-rs/gltf"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
inflections = "1.1"
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"
