[package]
name = "gltf-extensions"
version = "0.1.0"
authors = ["alteous <alteous@outlook.com>"]
description = "Extensions the gltf crate"
repository = "https://github.com/alteous/gltf"
license = "MIT/Apache-2.0"

[dependencies]
gltf-json = { path = "../gltf-json" }

[features]
default = []
names = ["gltf-json/names"]
extras = ["gltf-json/extras"]
