[package]
name = "gltf-importer"
version = "1.0.0"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]
description = "Reference importer for the gltf crate"
repository = "https://github.com/gltf-rs/gltf"
license = "MIT/Apache-2.0"

[dependencies]
base64 = "0.6"
gltf = { path = "..", version = "1.0.0" }
gltf-utils = { path = "../gltf-utils", version = "1.0.0" }

[features]
default = []
names = ["gltf/names"]
extras = ["gltf/extras"]
