[package]
name = "gltf-json"
version = "1.0.0"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]
description = "JSON parsing for the gltf crate"
repository = "https://github.com/gltf-rs/gltf"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
gltf-derive = { path = "../gltf-derive", version = "1.0.0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = { features = ["raw_value"], version = "1.0" }

[features]
default = []
names = []
extras = []
KHR_lights_punctual = []
KHR_materials_ior = []
KHR_materials_pbrSpecularGlossiness = []
KHR_materials_specular = []
KHR_materials_transmission = []
KHR_materials_unlit = []
KHR_materials_variants = []
KHR_materials_volume = []
KHR_texture_transform = []
KHR_materials_emissive_strength = []
