[package]
name = "gltf-utils"
version = "1.0.0"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]
description = "Utilities to complement the gltf crate"
repository = "https://github.com/gltf-rs/gltf"
license = "MIT/Apache-2.0"

[dependencies]
gltf = { path = "..", version = "1.0.0" }

[features]
default = []
names = []
extras = []
