[package]
name = "gltf-utils"
version = "0.10.0"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]
description = "Utilities to complement the gltf crate"
repository = "https://github.com/gltf-rs/gltf"
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "1.1"
gltf = { path = "..", version = "0.10.0" }

[features]
default = []
names = []
extras = []
